style: align social icons to the center of the page, padding to space the elements at the center

--- a/style.css
+++ b/style.css
@@ -64,9 +64,9 @@
     text-align: center;
     justify-content: center;
 }
-/*.row7{
+.row7{
     background-color: whitesmoke;
     padding: 20px;
     text-align: center;
     justify-items: center;
-} */
+} 
