--- a/style.css
+++ b/style.css
@@ -70,6 +70,7 @@
     padding-right: 2rem;
     width: 24%;
     padding: 5px;
+    transition: 1s;
 }
 .column2{
 float: left;
@@ -133,4 +134,12 @@ width: 33.33%;
   }
   #feedback{
       color: rgb(1, 68, 1);
+  }
+  .column img{
+
+    border-radius: 5px;
+  }
+  .column:hover{
+    transform: scale(1.3);
+    z-index: 2;
   }
