--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ width: 33.33%;
     background-color: whitesmoke;
 }
 .row6{
-    background-image: url("/assets/backgrounds/c_image.jpg");
+    background-image: url(./assets/backgrounds/c_image.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
